FullQa New/src/objects/SVM_PVM_Program__c.object
<CustomObject>
    <description>Source for all SVM/PVM data analytics.  Updated via Analytical Snapshot reports.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-7900</description>
        <formula>Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account tied to the CHI scores</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_CHI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Case__c</fullName>
        <formula>Account_Name__r.Average_Open_Case_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Case Ageing (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_in_CHI__c</fullName>
        <description>Owner: Alex Stearns</description>
        <formula>(( Total_CHI__c  -  W2_2016_Total_CHI__c ) - 1) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Change in CHI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Change_in_NPS__c</fullName>
        <description>Owner: Alex Stearns</description>
        <formula>((NPS_Score_Average__c - W2_2016_NPS_Score__c) - 1) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Change in NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Churn_Risk_Rating__c</fullName>
        <formula>IF( Churn_Risk__c &lt;16,&quot;Low&quot;,IF(Churn_Risk__c &lt;46,&quot;Medium&quot;,IF(Churn_Risk__c &gt;45,&quot;High&quot;,IF(Churn_Risk__c=0,&quot;*&quot;,IF(ISNULL(Churn_Risk__c),&quot;*&quot;,&quot;&quot;) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Churn Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <formula>IF( AND(Account_Name__r.Open_Cases__c=0),((5- Total_CHI__c )+(10- NPS_Score_Average__c )),((5- Total_CHI__c )+(10- NPS_Score_Average__c )+ (Account_Name__r.Open_Cases__c )+(( Account_Name__r.Escalated_Cases__c /Account_Name__r.Open_Cases__c)*10)+(( Account_Name__r.Average_Open_Case_Age__c /60)*10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Churn Risk</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score_Average__c</fullName>
        <label>NPS Score Average</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_CHI__c</fullName>
        <label>Product CHI</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_CHI__c</fullName>
        <label>Relationship CHI</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_CHI__c</fullName>
        <label>Support CHI</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CHI__c</fullName>
        <formula>( Product_CHI__c + Relationship_CHI__c + Support_CHI__c + Value_CHI__c )/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total CHI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_CHI__c</fullName>
        <label>Value CHI</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_2016_NPS_Score__c</fullName>
        <label>W1 2016 NPS Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W1_2016_Total_CHI__c</fullName>
        <label>W1 2016 Total CHI</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_2016_NPS_Score__c</fullName>
        <label>W2 2016 NPS Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W2_2016_Total_CHI__c</fullName>
        <label>W2 2016 Total CHI</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Dev_Issues__c</fullName>
        <formula>Account_Name__r.Escalated_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Dev Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Open_Cases__c</fullName>
        <formula>Account_Name__r.Open_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SVM PVM Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>7/18/2017 12:00 AM</value>
        </filters>
        <label>All-Remove</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SVM PVM Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>